# aishell

./: Cargo.toml  LICENSE  README.md  install.sh  setup_bash.sh
src/: ai.rs  main.rs
