[package]
name = "aishell"
version = "0.1.1"
edition = "2021"
description = "A shell that understands and suggests fixes for failed commands."
license = "MIT"
license-file = "LICENSE"
documentation = "https://github.com/ryankopf/aishell#readme"
homepage = "https://github.com/ryankopf/aishell"
repository = "https://github.com/ryankopf/aishell"

[dependencies]
tokio = { version = "1", features = ["full"] }
nix = { version = "0.26", features = ["process"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"